# fennec

./: .editorconfig  .gitignore  Cargo.toml  DEV.md  README.md  TODO.md  cspell.json  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/fc/: build.rs  commands.rs  flags.rs  main.rs  repl.rs
crates/fennec/: Cargo.toml  build.rs  commands.rs  flags.rs  main.rs
crates/fennec-common/: Cargo.toml
crates/fennec-common/src/: import_path.rs  lib.rs  module.rs  sync_state.rs  syncstate.rs  types.rs  util.rs  workspace.rs
crates/fennec-core/: Cargo.toml
crates/fennec-core/src/: core.rs  import.rs  lib.rs
crates/fennec-module/: Cargo.toml
crates/fennec-module/src/: analysis.rs  lexer.rs  lexer_def.rs  lexer_gen.rs  lib.rs  module.rs  parser.rs
crates/fennec-module/src/snapshots/: fennec_module__lexer__tests__lex_empty.snap  fennec_module__lexer__tests__lex_normal.snap  fennec_module__lexer__tests__lex_trivial_err.snap  fennec_module__lexer__tests__lex_unterminated.snap  fennec_module__parser__tests__parse_empty.snap  fennec_module__parser__tests__parse_normal.snap  fennec_module__parser__tests__parse_trivial_err.snap  fennec_module__parser__tests__parse_unterminated.snap
crates/fennec-module/tests/parser_fuzz/: main.rs
crates/fennec-module/tests/parser_fuzz/corpus/: fennec.mod
crates/fennec-module/tests/parser_fuzz/crashes/: crash-b307d56b5bc2aac8463788fc80289a22c00b4b8d
crates/fennec-parser/: Cargo.toml  build.rs
crates/fennec-parser/src/: ast.rs  fennec.lalrpop  lib.rs
crates/fennec-server/: Cargo.toml
crates/fennec-server/src/: handshake.rs  lib.rs  server.rs
crates/fennec-vfs/: Cargo.toml
crates/fennec-vfs/src/: lib.rs  manifest.rs  vfs.rs
crates/fennec-vfs/tests/: .gitignore  vfs_test.rs  vfs_workspace_reconstruct.rs  vfs_workspace_reconstruct_test.rs
crates/fennec/src/: commands.rs  flags.rs  main.rs  new.rs  repl.rs  server.rs  version.rs
docs/: 0-data.md  0-start.md  1-generic.md  1-mvp.fnc  1-mvp.md  2-ownership.md  3-reg-adt.md  4-misc.md  4-small.md  5-build.md  5-tablez.md  6-index.md  6-onemore.md  7-todo.md  8-search.md  codingstyle.md  design.md  spec.md  todo.md
docs/old/: 0-data.fnc  0-data.md  1-mvp.md  2-ref.fnc
docs/old-2/: 0-start.md  1-generic.md  2-ownership.md  3-quality-of-life.md  6-onemore.md  7-todo.md  8-search.md
examples/hello/: fennec.mod  fennec.toml
ide/vscode-fennec/: .gitignore  CHANGELOG.md  README.md  fennec.mod.language-configuration.json  language-configuration.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
ide/vscode-fennec/src/: extension.ts  statusbar.ts
ide/vscode-fennec/src/test/: runTest.ts
ide/vscode-fennec/src/test/suite/: extension.test.ts  index.ts
xtask/: Cargo.toml
xtask/src/: flags.rs  main.rs
