[workspace]
members = ["crates/*", "xtask"]
resolver = "2"

[profile.dev]
debug = 0
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.test]
opt-level = 1

[profile.fuzz]
inherits = "dev"
opt-level = 3
incremental = false
codegen-units = 1

[profile.release]
debug = 0
lto = "thin"

[workspace.package]
version = "0.1.8"
description = "Fennec Programming Language"
authors = ["Gregory Petrosyan <pgregory@pgregory.net>"]
homepage = "https://fennec-lang.org"
repository = "https://github.com/fennec-lang/fennec"
license = "MPL-2.0"
edition = "2021"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
unwrap_used = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.dependencies]
ahash = "0.8.6"
anyhow = "1"
bolero = "0.10"
clap = "4.4"
clap-verbosity-flag = "2.1"
debug-ignore = "1"
env_logger = "0.10"
fastrand = { version = "2", default-features = false }
insta = { version = "1.34.0", default-features = false, features = ["colors"] }
lalrpop = { version = "0.20", default-features = false }
lalrpop-util = { version = "0.20", default-features = false }
line-index = "0.1.1"
log = { version = "0.4", features = ["std"] }
logos = { version = "0.13.0", default-features = false, features = ["std"] }
logos-codegen = "0.13.0"
lsp-server = "0.7.4"
lsp-types = "0.94.1"
once_cell = "1.18"
parking_lot = "0.12"
proc-macro2 = "1"
proptest = "1.4.0"
proptest-state-machine = "0.1.0"
regex = "1"
semver = "1"
serde = "1"
serde_json = "1"
similar-asserts = "1.5"
slotmap = "1"
tempfile = "3"
text-size = "1.1"
time = { version = "0.3.30", default-features = false }
walkdir = "2"
xflags = "0.3.1"
xshell = "0.2.5"

fennec-common = { path = "crates/fennec-common", version = "0.1.8" }
fennec-core = { path = "crates/fennec-core", version = "0.1.8" }
fennec-module = { path = "crates/fennec-module", version = "0.1.8" }
fennec-parser = { path = "crates/fennec-parser", version = "0.1.8" }
fennec-server = { path = "crates/fennec-server", version = "0.1.8" }
fennec-vfs = { path = "crates/fennec-vfs", version = "0.1.8" }

[workspace.metadata.release]
allow-branch = ["master", "dev"]
shared-version = true
tag-name = "v{{version}}"
tag-message = "fennec v{{version}}"
pre-release-commit-message = "fennec v{{version}}"
