[package]
name = "xtask"
version = "0.0.0"
license.workspace = true
edition.workspace = true
readme = false
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
env_logger.workspace = true
log.workspace = true
xflags.workspace = true
xshell.workspace = true

[package.metadata.release]
release = false
