[package]
name = "fennec-common"
version.workspace = true
description.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme = false

[lints]
workspace = true

[dependencies]
ahash.workspace = true
anyhow.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
regex.workspace = true

[dev-dependencies]
similar-asserts.workspace = true

[package.metadata.release]
pre-release-replacements = [
    { file = "src/lib.rs", search = 'pub const RELEASE_VERSION: &str = ".*"', replace = 'pub const RELEASE_VERSION: &str = "{{version}}"' },
]
