[package]
name = "fennec-core"
version.workspace = true
description.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme = false

[dependencies]
anyhow.workspace = true
log.workspace = true
once_cell.workspace = true
regex.workspace = true

fennec-common.workspace = true
