[package]
name = "fennec-module"
version.workspace = true
description.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
logos.workspace = true
serde = { workspace = true, features = ["serde_derive"] }
toml.workspace = true

fennec-common.workspace = true
