[package]
name = "fennec-module"
version.workspace = true
description.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
logos.workspace = true
semver.workspace = true

fennec-common.workspace = true

[dev-dependencies]
insta.workspace = true
