[package]
name = "fennec-parser"
version.workspace = true
description.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme = false

[build-dependencies]
lalrpop.workspace = true

[dependencies]
lalrpop-util.workspace = true
regex.workspace = true
