[package]
name = "fennec-parser"
version.workspace = true
description.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme = false

[lints]
workspace = true

[build-dependencies]
lalrpop = { workspace = true, features = ["lexer", "unicode"] }

[dependencies]
lalrpop-util = { workspace = true, features = ["lexer", "unicode"] }
regex.workspace = true
