[package]
name = "fennec-server"
version.workspace = true
description.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme = false

[dependencies]
anyhow.workspace = true
log.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true

fennec-common.workspace = true
