[package]
name = "fennec-vfs"
version.workspace = true
description.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme = false

[dependencies]
anyhow.workspace = true
log.workspace = true
semver.workspace = true
serde.workspace = true
toml.workspace = true
walkdir.workspace = true

fennec-common.workspace = true
