[package]
name = "fennec-vfs"
version.workspace = true
description.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
debug-ignore.workspace = true
log.workspace = true
serde = { workspace = true, features = ["serde_derive"] }
toml.workspace = true
walkdir.workspace = true

fennec-common.workspace = true

[dev-dependencies]
env_logger.workspace = true
fastrand.workspace = true
pretty_assertions.workspace = true
proptest-state-machine.workspace = true
proptest.workspace = true
slotmap.workspace = true
tempfile.workspace = true
