[package]
name = "fennec"
version.workspace = true
description.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme = "../../README.md"
default-run = "fennec"

[dependencies]
anyhow.workspace = true
env_logger.workspace = true
log.workspace = true
regex.workspace = true
xflags.workspace = true

fennec-parser.workspace = true

[build-dependencies]
anyhow.workspace = true
time.workspace = true
xshell.workspace = true

[package.metadata.release]
pre-release-replacements = [
    { file = "build.rs", search = 'const RELEASE_VERSION: &str = ".*"', replace = 'const RELEASE_VERSION: &str = "{{version}}"' },
    { file = "../../examples/hello/fennec.toml", search = 'fennec = ".*"', replace = 'fennec = "{{version}}' },
]
