[package]
name = "fennec"
version.workspace = true
description.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme = "../../README.md"
default-run = "fennec"

[dependencies]
anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
regex.workspace = true

fennec-core.workspace = true
fennec-parser.workspace = true
fennec-server.workspace = true

[build-dependencies]
anyhow.workspace = true
time.workspace = true
xshell.workspace = true

[package.metadata.release]
pre-release-replacements = [
    { file = "build.rs", search = 'const RELEASE_VERSION: &str = ".*"', replace = 'const RELEASE_VERSION: &str = "{{version}}"' },
    { file = "../../ide/vscode-fennec/package.json", search = '"version": ".*",', replace = '"version": "{{version}}",' },
]
