[package]
name = "fennec"
version.workspace = true
description.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme = "../../README.md"
default-run = "fennec"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
clap-verbosity-flag.workspace = true
env_logger.workspace = true
log.workspace = true
once_cell.workspace = true
regex.workspace = true

fennec-common.workspace = true
fennec-core.workspace = true
fennec-module.workspace = true
fennec-server.workspace = true
fennec-vfs.workspace = true

[build-dependencies]
anyhow.workspace = true
time = { workspace = true, features = ["local-offset", "formatting"] }
xshell.workspace = true

[package.metadata.release]
pre-release-replacements = [
    { file = "build.rs", search = 'const RELEASE_VERSION_STR: &str = ".*"', replace = 'const RELEASE_VERSION_STR: &str = "{{version}}"' },
    { file = "../../ide/vscode-fennec/package.json", search = '"version": ".*",', replace = '"version": "{{version}}",' },
]
